--- a/Kenya_Poverty/kenya_poverty_levels.ipynb
+++ b/Kenya_Poverty/kenya_poverty_levels.ipynb
@@ -428,6 +428,49 @@
     "collapsed": false
    },
    "id": "7b363759807a4c6b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Data Cleaning**\n",
+    "\n",
+    "We will convert two columns to float data type. Also, the values in \n",
+    "it will be converted to thousands.The columns are 'Population (ths)'\n",
+    "and 'Number of Poor (ths)'."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2e5b6f9c4b6db876"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "residence_county                 object\nHeadcount Rate (%)              float64\nDistribution of the Poor (%)    float64\nPoverty Gap (%)                 float64\nSeverity of Poverty (%)         float64\nPopulation (ths)                float64\nNumber of Poor (ths)            float64\ndtype: object"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poverty_level['Population (ths)'] = poverty_level['Population (ths)'].str.replace(',', '').astype(float)\n",
+    "\n",
+    "poverty_level['Number of Poor (ths)'] = poverty_level['Number of Poor (ths)'].str.replace(',', '').astype(float)\n",
+    "\n",
+    "poverty_level.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-16T07:02:05.635976017Z",
+     "start_time": "2023-11-16T07:01:58.961216290Z"
+    }
+   },
+   "id": "5a3e6295cecec2e5"
   }
  ],
  "metadata": {
