--- a/Kenya_Poverty/kenya_poverty_levels.ipynb
+++ b/Kenya_Poverty/kenya_poverty_levels.ipynb
@@ -471,6 +471,19 @@
     }
    },
    "id": "5a3e6295cecec2e5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Comparing population with the Number of Poor**\n",
+    "\n",
+    "Let's compare the population with the number of poor. We will use a\n",
+    "boxplot to do this. The main row to be used is the national row."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "50d395cbc5159d87"
   }
  ],
  "metadata": {
