--- a/Kenya_Poverty/kenya_poverty_levels.ipynb
+++ b/Kenya_Poverty/kenya_poverty_levels.ipynb
@@ -484,6 +484,16 @@
     "collapsed": false
    },
    "id": "50d395cbc5159d87"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "49758f37fd639e6c"
   }
  ],
  "metadata": {
