--- a/Kenya_Poverty/kenya_poverty_levels.ipynb
+++ b/Kenya_Poverty/kenya_poverty_levels.ipynb
@@ -514,6 +514,24 @@
     }
    },
    "id": "e8cb863e5cd3f9c0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Nairobi has the highest population followed by Kiambu and Nakuru. "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b505505166bb1fb2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "523c4957863f650e"
   }
  ],
  "metadata": {
