--- a/Kenya_Poverty/kenya_poverty_levels.ipynb
+++ b/Kenya_Poverty/kenya_poverty_levels.ipynb
@@ -378,6 +378,16 @@
     }
    },
    "id": "f8e67b957f14a965"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Kiambu has the highest poverty severity followed by Wajir and West Pokot."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "140c8f6cbaf0cf65"
   }
  ],
  "metadata": {
