--- a/Kenya_Poverty/kenya_poverty_levels.ipynb
+++ b/Kenya_Poverty/kenya_poverty_levels.ipynb
@@ -388,6 +388,14 @@
     "collapsed": false
    },
    "id": "140c8f6cbaf0cf65"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f5f4074cecc5c636"
   }
  ],
  "metadata": {
