--- a/Automobile_Sales/Automobile_Sales.ipynb
+++ b/Automobile_Sales/Automobile_Sales.ipynb
@@ -162,6 +162,43 @@
     }
    },
    "id": "6ce9dda8944b8ff3"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Data Analysis**\n",
+    "\n",
+    "Let's check the number of unique values in each column."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9a5ef6b433cace8d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ORDERNUMBER              298\nQUANTITYORDERED           58\nPRICEEACH               1843\nORDERLINENUMBER           18\nSALES                   2690\nORDERDATE                246\nDAYS_SINCE_LASTORDER    1832\nSTATUS                     6\nPRODUCTLINE                7\nMSRP                      80\nPRODUCTCODE              109\nCITY                      71\nCOUNTRY                   19\nDEALSIZE                   3\ndtype: int64"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.nunique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-21T20:21:04.570932225Z",
+     "start_time": "2023-11-21T20:21:04.458163087Z"
+    }
+   },
+   "id": "9a44ae218fea748f"
   }
  ],
  "metadata": {
