--- a/Automobile_Sales/Automobile_Sales.ipynb
+++ b/Automobile_Sales/Automobile_Sales.ipynb
@@ -199,6 +199,14 @@
     }
    },
    "id": "9a44ae218fea748f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c1854b52acff6a6"
   }
  ],
  "metadata": {
