--- a/Automobile_Sales/Automobile_Sales.ipynb
+++ b/Automobile_Sales/Automobile_Sales.ipynb
@@ -245,6 +245,25 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "USA and Spain have the highest number of orders. While Ireland,\n",
+    "Philippines and Australia have the lowest number of orders."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "df232e4e6df3954c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "75d193168506b37a"
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
