--- a/TATA Motors/TATA.ipynb
+++ b/TATA Motors/TATA.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-24T20:05:23.674945452Z",
-     "start_time": "2024-01-24T20:05:23.511171795Z"
+     "end_time": "2024-01-24T20:16:47.446642690Z",
+     "start_time": "2024-01-24T20:16:47.051831379Z"
     }
    },
    "outputs": [
@@ -33,11 +33,6 @@
       "2  2006-12-05  170.167969  170.867416  167.293518  169.209824  148.187225   \n",
       "3  2006-12-06  167.121048  170.167969  165.568832  168.912796  147.927109   \n",
       "4  2006-12-07  168.634933  171.701019  167.322250  171.068634  149.815109   \n",
-      "5  2006-12-08  170.551239  171.317749  165.425110  166.105408  145.468521   \n",
-      "6  2006-12-11  166.680298  166.680298  156.178940  160.864304  140.878540   \n",
-      "7  2006-12-12  160.778076  163.077637  144.681107  157.184998  137.656342   \n",
-      "8  2006-12-13  159.360001  163.844162  153.620667  161.180496  141.155457   \n",
-      "9  2006-12-14  161.448776  164.610687  160.222351  162.588974  142.388962   \n",
       "\n",
       "       Volume  \n",
       "0  10001085.0  \n",
@@ -45,11 +40,19 @@
       "2   6699838.0  \n",
       "3   4822862.0  \n",
       "4   3963218.0  \n",
-      "5   5872840.0  \n",
-      "6   6394422.0  \n",
-      "7  11916839.0  \n",
-      "8   6957223.0  \n",
-      "9   4875056.0  \n"
+      "            Date        Open        High         Low       Close   Adj Close  \\\n",
+      "4228  2024-01-15  820.000000  820.400024  810.299988  812.450012  812.450012   \n",
+      "4229  2024-01-16  812.450012  827.000000  812.450012  818.849976  818.849976   \n",
+      "4230  2024-01-17  811.000000  813.700012  804.000000  805.549988  805.549988   \n",
+      "4231  2024-01-18  807.000000  822.950012  797.000000  819.049988  819.049988   \n",
+      "4232  2024-01-19  823.849976  826.000000  819.500000  823.549988  823.549988   \n",
+      "\n",
+      "          Volume  \n",
+      "4228   4835856.0  \n",
+      "4229  10159066.0  \n",
+      "4230   7895439.0  \n",
+      "4231  11500495.0  \n",
+      "4232   5706888.0  \n"
      ]
     }
    ],
@@ -58,7 +61,8 @@
     "\n",
     "data = pd.read_csv('./TATAMOTORS.NS.csv')\n",
     "\n",
-    "print(data.head(10))"
+    "print(data.head(5))\n",
+    "print(data.tail(5))"
    ]
   }
  ],
