--- a/Heart Attack pred/heart_attack.ipynb
+++ b/Heart Attack pred/heart_attack.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c435536cc783d6d8",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "***HEART ATTACK ANALYSIS AND PREDICTION***\n",
     "\n",
     "By use of heart.csv dataset, we will try to predict the heart attack based on the given features on the dataset."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c435536cc783d6d8"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "bf377c140b9a4803",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-24T19:52:32.258828543Z",
+     "start_time": "2024-01-24T19:52:31.638617294Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -51,19 +60,14 @@
     "data = pd.read_csv(\"./heart.csv\")\n",
     "\n",
     "print(data.head(10))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-24T19:52:32.258828543Z",
-     "start_time": "2024-01-24T19:52:31.638617294Z"
-    }
-   },
-   "id": "bf377c140b9a4803",
-   "execution_count": 4
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "5b267795b850172b",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "**Age**: Numeric (e.g., 52)\n",
     "**Sex**: Categorical (0: Female, 1: Male)\n",
@@ -78,11 +82,29 @@
     "**Slope of Peak Exercise ST Segment**: Categorical (0: Upsloping, 1: Flat, 2: Downsloping)\n",
     "**Number of Major Vessels Colored by Fluoroscopy**: Numeric (0 to 3)\n",
     "**Thalassemia**: Categorical (0: Normal, 1: Fixed Defect, 2: Reversible Defect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "90acfccf",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdata\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "5b267795b850172b"
+   "source": [
+    "data.shape"
+   ]
   }
  ],
  "metadata": {
@@ -94,14 +116,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
