--- a/TATA Motors/TATA.ipynb
+++ b/TATA Motors/TATA.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-24T20:16:47.446642690Z",
-     "start_time": "2024-01-24T20:16:47.051831379Z"
+     "end_time": "2024-01-29T08:57:34.431411207Z",
+     "start_time": "2024-01-29T08:57:33.499415307Z"
     }
    },
    "outputs": [
@@ -64,6 +64,43 @@
     "print(data.head(5))\n",
     "print(data.tail(5))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "***Data Cleaning***\n",
+    "\n",
+    "Search for null values"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2a28cdb49db67441"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Date         0\nOpen         7\nHigh         7\nLow          7\nClose        7\nAdj Close    7\nVolume       7\ndtype: int64"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-29T08:57:34.739328957Z",
+     "start_time": "2024-01-29T08:57:34.156640655Z"
+    }
+   },
+   "id": "e97423c69f32b54d",
+   "execution_count": 3
   }
  ],
  "metadata": {
