--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -26,8 +26,8 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T19:07:56.008324677Z",
-     "start_time": "2024-01-31T19:07:43.304759226Z"
+     "end_time": "2024-02-01T06:36:38.039021848Z",
+     "start_time": "2024-02-01T06:36:29.723213673Z"
     },
     "collapsed": true
    },
@@ -244,8 +244,8 @@
    "id": "8646736ce59106f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T19:07:56.332689734Z",
-     "start_time": "2024-01-31T19:07:55.721216120Z"
+     "end_time": "2024-02-01T06:36:38.477856248Z",
+     "start_time": "2024-02-01T06:36:36.929531387Z"
     },
     "collapsed": false
    },
@@ -281,8 +281,8 @@
    "id": "cfcfb739aeb0a04a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T19:07:56.659570016Z",
-     "start_time": "2024-01-31T19:07:55.801662606Z"
+     "end_time": "2024-02-01T06:36:38.697866894Z",
+     "start_time": "2024-02-01T06:36:36.981284867Z"
     },
     "collapsed": false
    },
@@ -333,8 +333,8 @@
    "id": "224aa0ab420e20c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T19:09:45.227618094Z",
-     "start_time": "2024-01-31T19:09:44.718150908Z"
+     "end_time": "2024-02-01T06:36:38.702968882Z",
+     "start_time": "2024-02-01T06:36:37.182387363Z"
     },
     "collapsed": false
    },
@@ -381,8 +381,8 @@
    "id": "fa8816b0c60c5713",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T19:42:02.700162363Z",
-     "start_time": "2024-01-31T19:42:01.439976013Z"
+     "end_time": "2024-02-01T06:36:38.889538566Z",
+     "start_time": "2024-02-01T06:36:37.268868316Z"
     },
     "collapsed": false
    },
@@ -609,8 +609,8 @@
    "id": "24f6491d8186d2f1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-31T19:37:06.302959184Z",
-     "start_time": "2024-01-31T19:37:04.634324105Z"
+     "end_time": "2024-02-01T06:36:39.190261383Z",
+     "start_time": "2024-02-01T06:36:37.446699545Z"
     },
     "collapsed": false
    },
@@ -667,7 +667,12 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "829bf628",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-01T06:36:40.302492493Z",
+     "start_time": "2024-02-01T06:36:38.978791058Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -701,6 +706,186 @@
    "metadata": {},
    "source": [
     "As per above, diseases like asthma, stroke, osteoporosis, hypertension and Diabetes are the most common. We have 116 different type of diseases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "babd9a2586e05814",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "***FEATURE SELECTION***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ee55a1c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fever</th>\n",
+       "      <th>Cough</th>\n",
+       "      <th>Fatigue</th>\n",
+       "      <th>Difficulty Breathing</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Blood Pressure</th>\n",
+       "      <th>Cholesterol Level</th>\n",
+       "      <th>Outcome Variable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.00000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.501433</td>\n",
+       "      <td>0.478510</td>\n",
+       "      <td>0.69341</td>\n",
+       "      <td>0.252149</td>\n",
+       "      <td>46.323782</td>\n",
+       "      <td>0.495702</td>\n",
+       "      <td>0.991404</td>\n",
+       "      <td>0.951289</td>\n",
+       "      <td>0.532951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.500716</td>\n",
+       "      <td>0.500255</td>\n",
+       "      <td>0.46174</td>\n",
+       "      <td>0.434870</td>\n",
+       "      <td>13.085090</td>\n",
+       "      <td>0.500699</td>\n",
+       "      <td>0.975231</td>\n",
+       "      <td>0.950154</td>\n",
+       "      <td>0.499629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fever       Cough    Fatigue  Difficulty Breathing         Age  \\\n",
+       "count  349.000000  349.000000  349.00000            349.000000  349.000000   \n",
+       "mean     0.501433    0.478510    0.69341              0.252149   46.323782   \n",
+       "std      0.500716    0.500255    0.46174              0.434870   13.085090   \n",
+       "min      0.000000    0.000000    0.00000              0.000000   19.000000   \n",
+       "25%      0.000000    0.000000    0.00000              0.000000   35.000000   \n",
+       "50%      1.000000    0.000000    1.00000              0.000000   45.000000   \n",
+       "75%      1.000000    1.000000    1.00000              1.000000   55.000000   \n",
+       "max      1.000000    1.000000    1.00000              1.000000   90.000000   \n",
+       "\n",
+       "           Gender  Blood Pressure  Cholesterol Level  Outcome Variable  \n",
+       "count  349.000000      349.000000         349.000000        349.000000  \n",
+       "mean     0.495702        0.991404           0.951289          0.532951  \n",
+       "std      0.500699        0.975231           0.950154          0.499629  \n",
+       "min      0.000000        0.000000           0.000000          0.000000  \n",
+       "25%      0.000000        0.000000           0.000000          0.000000  \n",
+       "50%      0.000000        1.000000           1.000000          1.000000  \n",
+       "75%      1.000000        2.000000           2.000000          1.000000  \n",
+       "max      1.000000        2.000000           2.000000          1.000000  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
    ]
   }
  ],
