--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -767,6 +767,24 @@
     "\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42361783",
+   "metadata": {},
+   "source": [
+    "The main reasons as per the graph for diagnosis of Asthma are Fevers, Coughs and Difficulty Breathing. As for Fatigue and Gender have some impact but to only 50% of the total population.\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b050dde5",
+   "metadata": {},
+   "source": [
+    "**Stroke**\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
