--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -376,61 +376,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fa8816b0c60c5713",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-15T04:48:28.639344539Z",
-     "start_time": "2024-02-15T04:48:24.093449623Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# using a function that will transform all columns except Disease column\n",
-    "# from sklearn.preprocessing import LabelEncoder\n",
-    "# \n",
-    "# def transform_data(data):\n",
-    "#     label_encoder = LabelEncoder()\n",
-    "#     for column in data.columns:\n",
-    "#         if column != 'Disease':\n",
-    "#             if data[column].dtype == 'object':\n",
-    "#                 data[column] = label_encoder.fit_transform(data[column])\n",
-    "#             \n",
-    "#     return data\n",
-    "# \n",
-    "# data = transform_data(data)\n",
-    "# data.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "24f6491d8186d2f1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-02-15T04:48:28.741706748Z",
-     "start_time": "2024-02-15T04:48:24.135274798Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# data.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c40074e9760fc364",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "By using LabelEncoder, it has transformed all the categorical data into numerical form."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "99581692",
    "metadata": {},
@@ -914,6 +859,260 @@
    "source": [
     "stroke_data['Outcome Variable'].value_counts().plot(kind='bar')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e89f2cdc",
+   "metadata": {},
+   "source": [
+    "Those are just examples of visualizing the diseases with possible causes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d83f31a",
+   "metadata": {},
+   "source": [
+    "***Feature Selection***\n",
+    "\n",
+    "First we will have to convert our categorical data to numerical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "406f1848",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Disease</th>\n",
+       "      <th>Fever</th>\n",
+       "      <th>Cough</th>\n",
+       "      <th>Fatigue</th>\n",
+       "      <th>Difficulty Breathing</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Blood Pressure</th>\n",
+       "      <th>Cholesterol Level</th>\n",
+       "      <th>Outcome Variable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Influenza</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Common Cold</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Eczema</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Asthma</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Eczema</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Influenza</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Influenza</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Hyperthyroidism</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hyperthyroidism</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Disease  Fever  Cough  Fatigue  Difficulty Breathing  Age  Gender  \\\n",
+       "0        Influenza      1      0        1                     1   19       0   \n",
+       "1      Common Cold      0      1        1                     0   25       0   \n",
+       "2           Eczema      0      1        1                     0   25       0   \n",
+       "3           Asthma      1      1        0                     1   25       1   \n",
+       "4           Asthma      1      1        0                     1   25       1   \n",
+       "5           Eczema      1      0        0                     0   25       0   \n",
+       "6        Influenza      1      1        1                     1   25       0   \n",
+       "7        Influenza      1      1        1                     1   25       0   \n",
+       "8  Hyperthyroidism      0      1        0                     0   28       0   \n",
+       "9  Hyperthyroidism      0      1        0                     0   28       0   \n",
+       "\n",
+       "   Blood Pressure  Cholesterol Level  Outcome Variable  \n",
+       "0               1                  2                 1  \n",
+       "1               2                  2                 0  \n",
+       "2               2                  2                 0  \n",
+       "3               2                  2                 1  \n",
+       "4               2                  2                 1  \n",
+       "5               2                  2                 1  \n",
+       "6               2                  2                 1  \n",
+       "7               2                  2                 1  \n",
+       "8               2                  2                 0  \n",
+       "9               2                  2                 0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#using a function that will transform all columns except Disease column\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "def transform_data(data):\n",
+    "    label_encoder = LabelEncoder()\n",
+    "    for column in data.columns:\n",
+    "        if column != 'Disease':\n",
+    "            if data[column].dtype == 'object':\n",
+    "                data[column] = label_encoder.fit_transform(data[column])\n",
+    "            \n",
+    "    return data\n",
+    "\n",
+    "data = transform_data(data)\n",
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7327c519",
+   "metadata": {},
+   "source": [
+    "Now our data is in numeric form."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f668a04",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
