--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -873,7 +873,7 @@
    "id": "0d83f31a",
    "metadata": {},
    "source": [
-    "***Feature Selection***\n",
+    "***FEATURE SELECTION***\n",
     "\n",
     "First we will have to convert our categorical data to numerical."
    ]
