--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -1112,7 +1112,36 @@
    "cell_type": "markdown",
    "id": "2f668a04",
    "metadata": {},
-   "source": []
+   "source": [
+    "Importing libraries important for feature selection. Then separate the feauture variable from target variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d6aa2219",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of features:  (349, 8)\n",
+      "Shape of target:  (349,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import SelectKBest\n",
+    "from sklearn.feature_selection import chi2\n",
+    "\n",
+    "X = data.drop(columns = ['Outcome Variable', 'Disease'])\n",
+    "y = data['Outcome Variable']\n",
+    "\n",
+    "#display the shape of X and y\n",
+    "print(\"Shape of features: \", X.shape)\n",
+    "print(\"Shape of target: \", y.shape)"
+   ]
   }
  ],
  "metadata": {
