--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -1142,6 +1142,22 @@
     "print(\"Shape of features: \", X.shape)\n",
     "print(\"Shape of target: \", y.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62543759",
+   "metadata": {},
+   "source": [
+    "Lets conduct an exploratory data analysis to understand their distributions and relationships between the features and target variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac446a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
