--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -1254,16 +1254,57 @@
    "id": "3415cffa",
    "metadata": {},
    "source": [
-    "***DATA ANALYSIS***\n",
-    "\n"
+    "**Normality testing**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a556c7c",
+   "execution_count": 43,
+   "id": "fa48b3f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics=0.637, p=0.000\n",
+      "Fever is not normally distributed\n",
+      "Statistics=0.636, p=0.000\n",
+      "Cough is not normally distributed\n",
+      "Statistics=0.580, p=0.000\n",
+      "Fatigue is not normally distributed\n",
+      "Statistics=0.540, p=0.000\n",
+      "Difficulty Breathing is not normally distributed\n",
+      "Statistics=0.960, p=0.000\n",
+      "Age is not normally distributed\n",
+      "Statistics=0.636, p=0.000\n",
+      "Gender is not normally distributed\n",
+      "Statistics=0.668, p=0.000\n",
+      "Blood Pressure is not normally distributed\n",
+      "Statistics=0.694, p=0.000\n",
+      "Cholesterol Level is not normally distributed\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test for normality\n",
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "for cols in X.columns:\n",
+    "    stat, p = shapiro(X[cols])\n",
+    "    print('Statistics=%.3f, p=%.3f' % (stat, p))\n",
+    "    alpha = 0.05\n",
+    "    if p > alpha:\n",
+    "        print(f'{cols} is normally distributed')\n",
+    "    else:\n",
+    "        print(f'{cols} is not normally distributed')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca670bbf",
+   "metadata": {},
    "source": []
   }
  ],
