--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "d6aa2219",
    "metadata": {},
    "outputs": [
@@ -1132,15 +1132,13 @@
     }
    ],
    "source": [
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import chi2\n",
-    "\n",
+    "#splitting the data into features and target\n",
     "X = data.drop(columns = ['Outcome Variable', 'Disease'])\n",
     "y = data['Outcome Variable']\n",
     "\n",
     "#display the shape of X and y\n",
     "print(\"Shape of features: \", X.shape)\n",
-    "print(\"Shape of target: \", y.shape)"
+    "print(\"Shape of target: \", y.shape)\n"
    ]
   },
   {
@@ -1153,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "cac446a0",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "fe4d5b45",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1216,7 @@
        "  Text(7.5, 0, 'Cholesterol Level')])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1259,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "fa48b3f8",
    "metadata": {},
    "outputs": [
@@ -1305,7 +1303,58 @@
    "cell_type": "markdown",
    "id": "ca670bbf",
    "metadata": {},
-   "source": []
+   "source": [
+    "***Model Selection***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5acd764e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X_train: (279, 8)\n",
+      "Shape of X_test: (70, 8)\n",
+      "Shape of y_train: (279,)\n",
+      "Shape of y_test: (70,)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 82.86%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import of needed libraries\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "model = RandomForestClassifier()\n",
+    "\n",
+    "#splitting the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(f'Shape of X_train: {X_train.shape}')\n",
+    "print(f'Shape of X_test: {X_test.shape}')\n",
+    "print(f'Shape of y_train: {y_train.shape}')\n",
+    "print(f'Shape of y_test: {y_test.shape}')\n",
+    "\n",
+    "#Training the model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "#Evaluate the model\n",
+    "y_pred = model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Accuracy: {accuracy*100:.2f}%')"
+   ]
   }
  ],
  "metadata": {
