--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "5acd764e",
    "metadata": {},
    "outputs": [
@@ -1320,13 +1320,7 @@
       "Shape of X_train: (279, 8)\n",
       "Shape of X_test: (70, 8)\n",
       "Shape of y_train: (279,)\n",
-      "Shape of y_test: (70,)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Shape of y_test: (70,)\n",
       "Accuracy: 82.86%\n"
      ]
     }
