--- a/Diseases/diseases_symptoms.ipynb
+++ b/Diseases/diseases_symptoms.ipynb
@@ -1151,6 +1151,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "9a478235",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fever</th>\n",
+       "      <th>Cough</th>\n",
+       "      <th>Fatigue</th>\n",
+       "      <th>Difficulty Breathing</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Blood Pressure</th>\n",
+       "      <th>Cholesterol Level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.00000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "      <td>349.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.501433</td>\n",
+       "      <td>0.478510</td>\n",
+       "      <td>0.69341</td>\n",
+       "      <td>0.252149</td>\n",
+       "      <td>46.323782</td>\n",
+       "      <td>0.495702</td>\n",
+       "      <td>0.991404</td>\n",
+       "      <td>0.951289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.500716</td>\n",
+       "      <td>0.500255</td>\n",
+       "      <td>0.46174</td>\n",
+       "      <td>0.434870</td>\n",
+       "      <td>13.085090</td>\n",
+       "      <td>0.500699</td>\n",
+       "      <td>0.975231</td>\n",
+       "      <td>0.950154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fever       Cough    Fatigue  Difficulty Breathing         Age  \\\n",
+       "count  349.000000  349.000000  349.00000            349.000000  349.000000   \n",
+       "mean     0.501433    0.478510    0.69341              0.252149   46.323782   \n",
+       "std      0.500716    0.500255    0.46174              0.434870   13.085090   \n",
+       "min      0.000000    0.000000    0.00000              0.000000   19.000000   \n",
+       "25%      0.000000    0.000000    0.00000              0.000000   35.000000   \n",
+       "50%      1.000000    0.000000    1.00000              0.000000   45.000000   \n",
+       "75%      1.000000    1.000000    1.00000              1.000000   55.000000   \n",
+       "max      1.000000    1.000000    1.00000              1.000000   90.000000   \n",
+       "\n",
+       "           Gender  Blood Pressure  Cholesterol Level  \n",
+       "count  349.000000      349.000000         349.000000  \n",
+       "mean     0.495702        0.991404           0.951289  \n",
+       "std      0.500699        0.975231           0.950154  \n",
+       "min      0.000000        0.000000           0.000000  \n",
+       "25%      0.000000        0.000000           0.000000  \n",
+       "50%      0.000000        1.000000           1.000000  \n",
+       "75%      1.000000        2.000000           2.000000  \n",
+       "max      1.000000        2.000000           2.000000  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "cac446a0",
    "metadata": {},
