--- a/Heart Attack pred/heart_attack.ipynb
+++ b/Heart Attack pred/heart_attack.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bf377c140b9a4803",
    "metadata": {
     "ExecuteTime": {
@@ -70,23 +70,35 @@
    },
    "source": [
     "**Age**: Numeric (e.g., 52)\n",
-    "**Sex**: Categorical (0: Female, 1: Male)\n",
-    "**Chest Pain Type**: Categorical (0: Typical Angina, 1: Atypical Angina, 2: Non-anginal Pain, 3: Asymptomatic)\n",
-    "**Resting Blood Pressure**: Numeric (e.g., 125)\n",
-    "**Serum Cholesterol**: Numeric in mg/dL (e.g., 212)\n",
-    "**Fasting Blood Sugar**: Categorical (0: <= 120 mg/dL, 1: > 120 mg/dL)\n",
-    "**Resting Electrocardiographic Results**: Categorical (0: Normal, 1: Abnormality, 2: Hypertrophy)\n",
-    "**Maximum Heart Rate Achieved**: Numeric (e.g., 168)\n",
-    "**Exercise-Induced Angina**: Categorical (0: No, 1: Yes)\n",
-    "**Oldpeak (ST Depression)**: Numeric (e.g., 1.0)\n",
-    "**Slope of Peak Exercise ST Segment**: Categorical (0: Upsloping, 1: Flat, 2: Downsloping)\n",
-    "**Number of Major Vessels Colored by Fluoroscopy**: Numeric (0 to 3)\n",
-    "**Thalassemia**: Categorical (0: Normal, 1: Fixed Defect, 2: Reversible Defect)"
+    "\n",
+    "**Sex**: Categorical (0: Female, 1: Male)d\n",
+    "\n",
+    "**Chest Pain Type**: Categorical (0: Typical Angina, 1: Atypical Angina, 2: Non-anginal Pain, 3: Asymptomatic)d\n",
+    "\n",
+    "**Resting Blood Pressure**: Numeric (e.g., 125)d\n",
+    "\n",
+    "**Serum Cholesterol**: Numeric in mg/dL (e.g., 212)d\n",
+    "\n",
+    "**Fasting Blood Sugar**: Categorical (0: <= 120 mg/dL, 1: > 120 mg/dL)d\n",
+    "\n",
+    "**Resting Electrocardiographic Results**: Categorical (0: Normal, 1: Abnormality, 2: Hypertrophy)d\n",
+    "\n",
+    "**Maximum Heart Rate Achieved**: Numeric (e.g., 168)d\n",
+    "\n",
+    "**Exercise-Induced Angina**: Categorical (0: No, 1: Yes)d\n",
+    "\n",
+    "**Oldpeak (ST Depression)**: Numeric (e.g., 1.0)d\n",
+    "\n",
+    "**Slope of Peak Exercise ST Segment**: Categorical (0: Upsloping, 1: Flat, 2: Downsloping)d\n",
+    "\n",
+    "**Number of Major Vessels Colored by Fluoroscopy**: Numeric (0 to 3)d\n",
+    "\n",
+    "**Thalassemia**: Categorical (0: Normal, 1: Fixed Defect, 2: Reversible Defect)d\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "90acfccf",
    "metadata": {},
    "outputs": [
@@ -96,13 +108,56 @@
        "(1025, 14)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13e5fdc0",
+   "metadata": {},
+   "source": [
+    "***Cleaning Data***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "95798b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age         0\n",
+       "sex         0\n",
+       "cp          0\n",
+       "trestbps    0\n",
+       "chol        0\n",
+       "fbs         0\n",
+       "restecg     0\n",
+       "thalach     0\n",
+       "exang       0\n",
+       "oldpeak     0\n",
+       "slope       0\n",
+       "ca          0\n",
+       "thal        0\n",
+       "target      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
    ]
   }
  ],
