--- a/Heart Attack pred/heart_attack.ipynb
+++ b/Heart Attack pred/heart_attack.ipynb
@@ -159,6 +159,22 @@
    "source": [
     "data.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "569633b7",
+   "metadata": {},
+   "source": [
+    "There are no missing values in the whole dataset. Now we check for outliers in continous data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4daac85c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
