--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "*** Google Monthly Stock Prediction ***"
+    "***Google Monthly Stock Prediction***\n",
+    "\n",
+    "Using the dataset from kaggle.com. I will use it to build a model that predicts the stock price of Google for the \n",
+    "next month. The dataset contains 4 mainly needed columns to complete the prediction. Opening and Closing of stock \n",
+    "will be of great value here. This will form a model on its own and then a model for low and high stock price will be\n",
+    "built."
    ],
    "metadata": {
     "collapsed": false
