--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -16,6 +16,16 @@
    "id": "3a0cf200551d2743"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "First, let's load the dataset and see what we have in it."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "99e69fc4cd99a495"
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
@@ -44,6 +54,17 @@
     "\n",
     "data.tail()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The dataset contains 7 columns. We will be using the Date, Open, High, Low, Close, Volume(The number of shares traded\n",
+    "on that month) and Adj Close(Adjusted closing price of the company's stock on that month) columns."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "70ab30dd9323e8d6"
   }
  ],
  "metadata": {
