--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -246,6 +246,40 @@
     "collapsed": false
    },
    "id": "62ade3be8c23811f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The plot shows that the High and Low prices of the stock have been increasing over the years. The High price is\n",
+    "higher than the Low price. The difference between the High and Low prices is not much."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e77f26779a4279e5"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Model Building**\n",
+    "\n",
+    "We will build a model that predicts the stock price of Google for the next month. We will use the Open and Close\n",
+    "prices of the stock to build the first model. First, we need to stabilise the data by removing the trend and \n",
+    "seasonality. We shall smoothen it out using the Moving Average method."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4c198de15d9d21d7"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "20d767169e14c1fa"
   }
  ],
  "metadata": {
