--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -337,6 +337,53 @@
    },
    "id": "20d767169e14c1fa",
    "execution_count": 30
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For now,using the Moving Average it has smoothened the curve of the stock prices. We can now proceed to\n",
+    "building the model using the Open and Close prices of the stock. We need a feature that will help to predict \n",
+    "and a target variable. The feature will be the Open as Close will be the target. We will split the data into\n",
+    "training and testing sets."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "537eee2b4f85a404"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(188, 1) (48, 1) (188,) (48,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = data['Open'].values\n",
+    "y = data['Close'].values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "X_train = X_train.reshape(-1, 1)\n",
+    "X_test = X_test.reshape(-1, 1)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-29T18:21:54.607673Z",
+     "start_time": "2024-03-29T18:21:52.469062Z"
+    }
+   },
+   "id": "b4f0d20ebb5343f6",
+   "execution_count": 31
   }
  ],
  "metadata": {
