--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -350,6 +350,42 @@
     "collapsed": false
    },
    "id": "537eee2b4f85a404"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(188, 1) (48, 1) (188, 1) (48, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = data['Open_EMA']\n",
+    "y = data['Close_EMA']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train = X_train.values.reshape(-1, 1)\n",
+    "X_test = X_test.values.reshape(-1, 1)\n",
+    "y_train = y_train.values.reshape(-1, 1)\n",
+    "y_test = y_test.values.reshape(-1, 1)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T08:06:33.141721Z",
+     "start_time": "2024-03-30T08:06:29.503276Z"
+    }
+   },
+   "id": "d5cfdbf65517e1b1",
+   "execution_count": 7
   }
  ],
  "metadata": {
