--- a/Google/Google_Monthly_Stock.ipynb
+++ b/Google/Google_Monthly_Stock.ipynb
@@ -386,6 +386,96 @@
    },
    "id": "d5cfdbf65517e1b1",
    "execution_count": 7
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Model Evaluation**\n",
+    "\n",
+    "By use of Linear Regression model, we will evaluate the model using the Mean Squared Error and R2 Score."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "65f131f610a19a6a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 6.022653703817582\n",
+      "R2 Score: 0.9964464140285868\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print('Mean Squared Error:', mse)\n",
+    "print('R2 Score:', r2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T08:37:02.363116Z",
+     "start_time": "2024-03-30T08:37:01.667825Z"
+    }
+   },
+   "id": "f019351a8276136",
+   "execution_count": 8
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The Mean Squared Error of 6.022 and R2 score of 0.996 shows that the model is accurate. We can proceed to \n",
+    "predict the stock price of Google for the next month."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5de3c3b95ab0f8a0"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Close Price: 145.43418123461745\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "X_new = np.array([data['Open_EMA'].iloc[-1]])\n",
+    "\n",
+    "y_new = model.predict(X_new.reshape(-1, 1))\n",
+    "\n",
+    "print('Predicted Close Price:', y_new[0][0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T08:44:39.635482Z",
+     "start_time": "2024-03-30T08:44:39.607579Z"
+    }
+   },
+   "id": "bedf1c0f50357675",
+   "execution_count": 9
   }
  ],
  "metadata": {
